# eigen-prover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  batch-prover.Dockerfile  clippy.toml  create_db.sh  database.Dockerfile  docker-compose.yml  output.json  scheduler-test.Dockerfile  service.Dockerfile
.github/workflows/: ci.yml
executor/: .env.example  Cargo.toml  README.md  account.json  executor_client.js  executor_fibonacci_client.js  executor_server.js  executor_vm_client.js  output.json  package.json
executor/examples/: batch_process.rs  exec_block.rs  exec_one.rs  prove_block.rs
executor/fibonacci/: fibonacci.js
executor/program/evm/: Cargo.toml
executor/program/evm/src/: lib.rs
executor/src/: executor.rs  lib.rs  main.rs  merkle_trie.rs  storage.rs  storage_extractor.rs  storage_range.rs
executor/test-vectors/: contractCall.json  output.json
guests/: README.md
guests/aggregation/: Cargo.toml
guests/guest-revm/: Cargo.toml
guests/guest-revm/src/: main.rs
guests/revm/: Cargo.toml
guests/revm/src/: main.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/proto/: README.md
proto/proto/src/proto/aggregator/v1/: aggregator.proto
proto/proto/src/proto/executor/v1/: executor.proto
proto/proto/src/proto/state/v1/: state.proto
proto/src/: lib.rs
prover/: Cargo.toml  README.md  build.rs  run.sh  start_prover.sh  suite.json  suite_opt.json
prover-core/: Cargo.toml
prover-core/src/: args.rs  lib.rs  prover.rs  stage.rs
prover-core/src/contexts/: agg_context.rs  batch_context.rs  cache_context.rs  final_context.rs
prover-scheduler/: Cargo.toml  build.rs
prover-scheduler/proto/src/proto/scheduler/v1/: scheduler.proto
prover-scheduler/src/: lib.rs  scheduler_server.rs  scheduler_service.rs
prover-scheduler/src/service/: batch_prover_service.rs  mod.rs
prover-scheduler/tests/: scheduler_e2e_test.rs  scheduler_prover_e2e_full_test.rs  scheduler_prover_e2e_test.rs
prover/data/: agg.stark_struct.json  batch.stark_struct.json  c12.stark_struct.json  final.stark_struct.json
prover/data/circuits/: README.md  c12a.verifier.circom  c12a.verifier.zkin.json  circuit.circom  circuit.zkin.json  fibonacci.final.circom  fibonacci.recursive2.circom
prover/data/circuits/0/: fibonacci.c12.circom  fibonacci.c12.zkin.json
prover/data/circuits/1/: fibonacci.c12.zkin.json  fibonacci.recursive1.circom
prover/data/evm/: batch.stark_struct.json
prover/data/executor/0/: fibonacci.c12.cm  fibonacci.c12.exec  fibonacci.c12.pil
prover/data/executor/0/fibonacci.c12_js/: fibonacci.c12.wasm
prover/data/executor/1/: fibonacci.c12.cm  fibonacci.c12.exec  fibonacci.c12.pil.json  fibonacci.cm  fibonacci.pil.json
prover/data/executor/1/fibonacci.c12_js/: fibonacci.c12.wasm
prover/data/lr/: c12.stark_struct.json
prover/data/pil-stark/circuits.gl/: poseidon.circom
prover/src/: agg_prove.rs  aggregate_prove.rs  args.rs  batch_prove.rs  c12_prove.rs  final_prove.rs  final_stark_prove.rs  integration_test.rs  lib.rs  pipeline.rs  prover.rs  registry.rs  snark.rs  snark_prove.rs  stage.rs  traits.rs
prover/src/contexts/: agg_context.rs  batch_context.rs  cache_context.rs  final_context.rs  mod.rs  snark_cache.rs
prover/src/eigen_prover/: agg_prover.rs  batch_prover.rs  final_prover.rs  mod.rs
prover/src/provers/: agg_prover.rs  batch_prover.rs  final_prover.rs  mod.rs
prover/src/scheduler/: event.rs  mod.rs  scheduler.rs
prover/src/sp1_prover/: README.md  agg_prover.rs  batch_prover.rs  final_prover.rs  mod.rs
prover/src/sp1_prover/agg_prover/program/: Cargo.toml
prover/src/sp1_prover/agg_prover/script/: Cargo.toml  build.rs
prover/src/sp1_prover/agg_prover/script/src/: lib.rs
prover/src/sp1_prover/batch_prover/program/: Cargo.toml
prover/src/sp1_prover/batch_prover/script/: Cargo.toml
prover/src/sp1_prover/batch_prover/script/src/: lib.rs
prover/src/sp1_prover/final_prover/program/: Cargo.toml
prover/src/sp1_prover/final_prover/script/: Cargo.toml  build.rs
prover/src/sp1_prover/final_prover/script/src/: lib.rs
prover/src/sp1_prover/program/: Cargo.toml
prover/src/sp1_prover/program/elf/: riscv32im-succinct-zkvm-elf
prover/src/sp1_prover/program/src/: main.rs
prover/src/sp1_prover/script/: Cargo.toml  README.md  nohup.out  run.sh
prover/src/sp1_prover/script/src/: lib.rs
prover/test-vectors/: g16.key  verification_key.json
prover/tests/: integration_test.rs
scripts/: start-batch-prover.sh  start-service.sh  stop-batch-prover.sh  stop-service.sh
service/: Cargo.toml  build.rs
service/conf/: base_config.toml  path.toml
service/examples/: exec.rs  set.rs
service/proto/src/proto/aggregator/v1/: aggregator.proto
service/proto/src/proto/executor/v1/: executor.proto
service/proto/src/proto/prover/v1/: prover.proto
service/proto/src/proto/scheduler/v1/: scheduler.proto
service/proto/src/proto/statedb/v1/: statedb.proto
service/src/: aggregator.rs  aggregator_client.rs  batch_prover.rs  batch_prover_service.rs  config.rs  executor.rs  executor_service.rs  main.rs  prover_service.rs  scheduler_service.rs  state_service.rs  statedb.rs
src/: httpServer.rs  http_server.rs  main.rs
state/: Cargo.toml
state/examples/: client.rs  nodes.rs  smt.rs
state/migrations/2023-09-16-142042_state.nodes/: up.sql
state/migrations/2023-09-16-142047_state.program/: down.sql  up.sql
state/src/: client.rs  lib.rs
statedb/: Cargo.toml  build.rs  create_db.sh  diesel.toml  install_db.sh
statedb/examples/: client.rs  nodes.rs  smt.rs
statedb/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
statedb/migrations/2023-09-16-142042_state.nodes/: down.sql  up.sql
statedb/migrations/2023-09-16-142047_state.program/: down.sql  up.sql
statedb/src/: database.rs  database_model.rs  lib.rs  models.rs  schema.rs  smt.rs  statedb_client.rs
test/: proof.json  public.json
utils/: Cargo.toml
utils/src/: errors.rs  lib.rs  scalar.rs
