[workspace]
members = [
  "prover",
  "service",
  "executor",
  "prover-scheduler",
  "metrics",
  "prover/src/sp1_prover/batch_prover/script",
  "prover/src/sp1_prover/batch_prover/program",
  "prover/src/sp1_prover/agg_prover/script",
  "prover/src/sp1_prover/agg_prover/program",
  "prover/src/sp1_prover/final_prover/script",
  "prover/src/sp1_prover/final_prover/program"
]

resolver = "2"
