[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.108"

thiserror = "1.0"
log = "0.4.0"

anyhow =  "1.0"
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde", "ethersdb" ] }
powdr-pipeline =       { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-riscv =          { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-riscv-executor = { git = "https://github.com/eigmax/powdr", branch = "main" }
powdr-number =         { git = "https://github.com/eigmax/powdr", branch = "main" }

models = { git = "https://github.com/eigmax/powdr-revme", branch = "continuations", package = "models" }
hex = "0.4.3"

ethers-providers = { version = "2.0", features = ["ws"] }
ethers-core = { version = "2.0" }
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
] }
futures = { version = "0.3.30" }
ruint = "1.11.1"
ruint-macro = "1.1.0"

[dev-dependencies]
env_logger = "0.10"
