[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ethers-core.workspace = true
ethers-providers.workspace = true
indicatif.workspace = true
log.workspace = true
models.workspace = true
powdr-number.workspace = true
project-root.workspace = true
revm.workspace = true
ruint.workspace = true
serde_json.workspace = true
state.workspace = true
tokio.workspace = true
zkvm .workspace = true

[dev-dependencies]
env_logger.workspace = true
