[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.108"

thiserror = "1.0"
log = "0.4.0"

anyhow =  "1.0"
revm = { git = "https://github.com/0xEigenLabs/revm", branch = "serde-no-std", default-features = false, features = [ "serde", "ethersdb" ] }
powdr = { git = "https://github.com/eigmax/powdr", branch = "feature-starky-avx512" }

zkvm = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
models = { git = "https://github.com/eigmax/powdr-revme", branch = "continuations", package = "models" }
hex = "0.4.3"
alloy-rlp = { version = "0.3", default-features = false, features = [
    "arrayvec",
    "derive",
] }
triehash = "0.8"
plain_hasher = "0.2"
hash-db = "0.15"

ethers-providers = { version = "2.0", features = ["ws"] }
ethers-core = { version = "2.0" }
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
] }
futures = { version = "0.3.30" }
ruint = "1.11.1"
ruint-macro = "1.1.0"
project-root = "0.2.2"

indicatif = "0.17"

[dev-dependencies]
env_logger = "0.10"

[features]
default = []
avx512 = ["zkvm/avx512"]
