[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.16", default-features = false, features = ["http1", "server", "tcp"] }
log = "0.4.0"
prometheus = { version = "0.13.0", default-features = false }
thiserror = "1.0"
tokio = { version = "1.21.0", features = ["parking_lot"] }
env_logger = "0.10"
lazy_static = "1.4.0"

[dev-dependencies]
hyper = { version = "0.14.16", features = ["client"] }
tokio = { version = "1.21.0", features = ["full"] }