[package]
name = "prover-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1" }
serde_json = "1.0.108"

prover = { path = "../prover" }
anyhow =  "1.0"
ethers-providers = { version = "2.0", features = ["ws"] }

serde = "1.0.92"
serde_derive = "1.0.92"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

#log
log = "0.4.0"
env_logger = "0.10"

[dev-dependencies]
mockall = "0.10.2"
tokio-test = "0.2.1"
tonic = "0.8.1"
log = "0.4.0"
env_logger = "0.10"
serde_json = "1.0.108"
serde = "1.0.92"
serde_derive = "1.0.92"
prost = "0.11.0"


[build-dependencies]
tonic-build = "0.8.0"

[features]
default = []
avx512 = ["prover/avx512"]
