[package]
name = "prover-scheduler"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1" }
serde_json = "1.0.108"
serde_cbor = "0.11"

prover = { path = "../prover" }
prover-core = { path = "../prover-core" }
anyhow =  "1.0"

serde = "1.0.92"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

#log
log = "0.4.0"

[dev-dependencies]
tonic = "0.8.1"
env_logger = "0.11.7"
serde_json = "1.0.108"
serde = "1.0.92"
prost = "0.11.0"


[build-dependencies]
tonic-build = "0.8.0"

[features]
#default = []
#avx512 = ["prover/avx512"]
