[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starky      = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
recursion   = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
groth16     = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false  }
algebraic   = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
dsl_compile = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
zkvm        = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }

once_cell = "1.18"

sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
# sp1-batch-prover = { path = "src/sp1_prover/batch_prover/script" }
# sp1-agg-prover = { path = "src/sp1_prover/agg_prover/script" }

#starky      = { path = "../../eigen-zkvm/starky" }
#recursion   = { path = "../../eigen-zkvm/recursion" }
#groth16     = { path = "../../eigen-zkvm/groth16" }
#algebraic   = { path = "../../eigen-zkvm/algebraic" }
#dsl_compile = { path = "../../eigen-zkvm/dsl_compile" } 
#zkvm        = { path = "../../eigen-zkvm/zkvm" }

metrics = { path = "../metrics" }

powdr = { git = "https://github.com/0xEigenLabs/powdr", branch = "eigen/v1", default-features = false }

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4.0"

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["algebraic/default", "groth16/default"]
avx512 = ["starky/avx512", "recursion/avx512", "zkvm/avx512", "powdr/starky-avx512"]
