[package]
name = "prover"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#starky                      = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
#recursion                   = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
#groth16                     = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false  }
#algebraic                   = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
#dsl_compile                 = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
#zkvm                        = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
recursion-gnark-ffi   = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }

once_cell = "1.18"

models = { git = "https://github.com/0xEigenLabs/powdr-revme", branch = "continuations", package = "models" }
serde_cbor = "0.11.2"

#sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.3", features = ["native-gnark"]}
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.3" }
bincode = "1.3.3"
ark-groth16 = { version = "0.5.0" }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [ "derive" ] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = ["curve"] }

prover-core = { path = "../prover-core" }

#starky      = { path = "../../eigen-zkvm/starky" }
#recursion   = { path = "../../eigen-zkvm/recursion" }
#groth16     = { path = "../../eigen-zkvm/groth16" }
#algebraic   = { path = "../../eigen-zkvm/algebraic" }
#dsl_compile = { path = "../../eigen-zkvm/dsl_compile" } 
#zkvm        = { path = "../../eigen-zkvm/zkvm" }

metrics = { path = "../metrics" }

#powdr = { git = "https://github.com/0xEigenLabs/powdr", branch = "eigen/v1", default-features = false }

tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
#serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

anyhow = "1.0"
log = "0.4.0"

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", tag = "v4.1.3" }

[dev-dependencies]
env_logger = "0.10"

[features]
#default = ["algebraic/default", "groth16/default"]
#avx512 = ["starky/avx512", "recursion/avx512", "zkvm/avx512", "powdr/starky-avx512"]
#sp1_prover = ["sp1-sdk", "sp1-build"]
