[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
ethers-providers.workspace = true
executor.workspace = true
lazy_static.workspace = true
log.workspace = true
plonky .workspace = true
proto.workspace = true
prover.workspace = true
revm .workspace = true
serde.workspace = true
state.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true
utils.workspace = true
uuid.workspace = true
