[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the HelloWorld gRPC server
name = "batch-prover"
path = "src/batch_prover_service.rs"

[dependencies]
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1" }
revm = { git = "https://github.com/0xEigenLabs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
serde_json = "1.0.108"
# biz
executor = { path = "../executor" }
prover = { path = "../prover", default-features = false }
prover-core = { path = "../prover-core" }
prover-scheduler = { path = "../prover-scheduler" }
metrics = { path = "../metrics" }
starky    = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
algebraic = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main", default-features = false }
models    = { git = "https://github.com/0xEigenLabs/powdr-revme", branch = "continuations", package = "models" }
lazy_static = "1.4.0"
ethers-providers = { version = "2.0", features = ["ws"] }
anyhow =  "1.0"
# config
serde = "1.0.92"
serde_derive = "1.0.92"
toml = "0.5.1"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

#log
log = "0.4.0"
env_logger = "0.11.7"

[build-dependencies]
tonic-build = "0.8.0"

[features]
default = [ "algebraic/default" ]
avx512 = ["prover/avx512", "starky/avx512", "executor/avx512"]
