[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
plonky.workspace = true
proto.workspace = true
sqlx.workspace = true
starky .workspace = true
tokio.workspace = true
tonic.workspace = true
utils.workspace = true
