[package]
name = "statedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }

diesel = { version = "2.1.0", features = ["r2d2", "postgres"] }
utils = { path = "../utils" }

hex = "0.4.3"

log = "0.4.0"
env_logger = "0.10"

num-bigint = "0.4.4"
num-traits = "0.2.16"
anyhow = { version = "1.0", default-features = false }
