[package]
name = "statedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
algebraic = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" , package="algebraic"}
diesel = { version = "2.1.0", features = ["r2d2", "postgres"] }
utils = { path = "../utils" }
tonic = "0.10.2"
anyhow =  "1.0"
hex = "0.4.3"
log = "0.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.16"
prost = "0.12.3"
lazy_static = "1.4.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.10.2"
