[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
thiserror="1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
num-bigint = "0.4.4"
num-traits = "0.2.16"
log = "0.4.0"
env_logger = "0.10"
anyhow = { version = "1.0", default-features = false }
