[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky = { git = "https://github.com/0xEigenLabs/eigen-zkvm", branch = "main" }
thiserror="1.0"
num-bigint = "0.4.4"
num-traits = "0.2.16"
log = "0.4.0"
anyhow =  "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
