[package]
name = "sp1-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "563ede179054dbc62186e24583bdcc4a68256799" }
models = { git = "https://github.com/eigmax/powdr-revme", branch = "continuations", package = "models" }
prover = { path = "../../../" }
serde_json = "1.0.108"
log = "0.4"
anyhow =  "1.0"

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", rev = "563ede179054dbc62186e24583bdcc4a68256799" }

[dev-dependencies]
env_logger = "0.10"