[package]
name = "agg-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
models = { git = "https://github.com/0xEigenLabs/powdr-revme", branch = "continuations", package = "models" }
prover = { path = "../../../../" }
serde_json = "1.0.108"
log = "0.4"
anyhow =  "1.0"

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }

[dev-dependencies]
env_logger = "0.10"