[package]
name = "groth16-verifier-program"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
sp1-verifier = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }
